# TicketsSimulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  settings.h
